--- a/config/1.config
+++ b/config/1.config
@@ -13,7 +13,7 @@ server
     error_page    405 ./errorsPages/403.html
 
     autoindex on
-    upload_path     /somewhere/s
+    upload_path     ./somewhere/
 
     redirection    /laloli https://www.youtube.com/
     redirection    /PATH00/index.html /PATH01/index.html
