Parsing v2, parse multiple servers with theyre location in a single multi_serv vector

--- a/config/1.config
+++ b/config/1.config
@@ -34,6 +34,7 @@ server
         root ./root/
         autoindex on
         allow_methods POST GET
+        upload_path
     }
 
     location /PATH00/jghjhj/
@@ -71,9 +72,86 @@ server
 
     location /pepsi/
     {
-        root ./root/
+        root ./root/EEEEEEEEEEEEEE
         autoindex on 
         client_max_body_size 1234
         allow_methods GET
+    }
+}
+server
+{
+    server_names    narjdal server1
+    listen          localhost:8080
+    root             ./server1/root/
+    allow_methods      DELETE
+   index            index.server5.html
+    upload_path     ./somewhere/server1/
+    error_page    404 ./server1/errorsPages/404.html
+    error_page    409 ./server1/errorsPages/407.html
+    error_page    405 ./server1/errorsPages/403.html
+
+    redirection    /server1/laloli https://www.youtube.com/
+    redirection    /server1/PATH00/index.html /PATH01/index.html
+    client_max_body_size 1999
+       
+}
+server
+{
+    server_names    narjdal server2
+    listen            192.168.1.1
+   
+    allow_methods    GET POST 
+    index   index0002.html index.html55
+    upload_path     ./somewhere/server2/
+
+    client_max_body_size  150
+    root        
+    autoindex off
+
+   
+}
+
+server
+{
+    server_names    narjdal server3
+    listen             0.0.0.0:03
+    root             ./server3/root/
+    allow_methods   GET POST
+    index   server3/index.html
+    upload_path     ./server3/
+
+    redirection    /server3/laloli https://www.youtube.com/
+    redirection    /server3/PATH00/index.html /PATH01/index.html
+     
+    autoindex   on
+
+     location location/server3/nb1
+    {
+        root ./root/test/nb1
+        autoindex  
+        index   index.html
+        allow_methods GET
+        upload_path server3/uploaad/nb1
+        client_max_body_size 
+      
+
+    }
+     location location/server3/nb2
+    {
+        root ./root/test/nb2
+       
+        index   index.htmlnb2
+        allow_methods GET
+        upload_path server3/uploaad/nb2
+      
+    }
+     location location/server3/nb3
+    {
+        root 
+        autoindex  off
+        index   index.htmlnb3
+        allow_methods GET
+        upload_path server3/uploaad/nb3
+      
     }
 }
