multi-server working more test to do

--- a/config/1.config
+++ b/config/1.config
@@ -15,7 +15,7 @@ server
     autoindex on
     upload_path     ./somewhere/
 
-    redirection    /laloli https://www.youtube.com/
+    redirection    /laloli/ https://www.youtube.com/
     redirection    /PATH00/index.html /PATH01/index.html
 
     client_max_body_size 14554
@@ -36,6 +36,14 @@ server
         allow_methods POST GET
         upload_path
     }
+       location /cgi/
+    {
+        root ./root/
+        autoindex on
+        allow_methods POST GET
+        upload_path
+    }
+  
 
     location /PATH00/jghjhj/
     {
@@ -83,13 +91,13 @@ server
     server_names    narjdal server1
     listen          localhost:8080
     root             ./server1/root/
-    allow_methods      DELETE
+    allow_methods      GET DELETE
    index            index.server5.html
     upload_path     ./somewhere/server1/
     error_page    404 ./server1/errorsPages/404.html
     error_page    409 ./server1/errorsPages/407.html
     error_page    405 ./server1/errorsPages/403.html
-
+    autoindex   on
     redirection    /server1/laloli https://www.youtube.com/
     redirection    /server1/PATH00/index.html /PATH01/index.html
     client_max_body_size 1999
@@ -97,8 +105,8 @@ server
 }
 server
 {
-    server_names    narjdal server2
-    listen            192.168.1.1
+    server_names    server2 server2
+    listen            192.168.1.1:99
    
     allow_methods    GET POST 
     index   index0002.html index.html55
@@ -113,11 +121,11 @@ server
 
 server
 {
-    server_names    narjdal server3
-    listen             0.0.0.0:03
-    root             ./server3/root/
+    server_names    server3 server3
+    listen           1.1.1.1:150
+    root             ./server3/
     allow_methods   GET POST
-    index   server3/index.html
+    index           index.html
     upload_path     ./server3/
 
     redirection    /server3/laloli https://www.youtube.com/
@@ -125,13 +133,14 @@ server
      
     autoindex   on
 
-     location location/server3/nb1
+   
+     location ./narjdal3/
     {
-        root ./root/test/nb1
+        root ./narjdal3/
         autoindex  
         index   index.html
         allow_methods GET
-        upload_path server3/uploaad/nb1
+        upload_path upload/
         client_max_body_size 
       
 
