--- a/config/1.config
+++ b/config/1.config
@@ -1,14 +1,13 @@
 server
 {
-    server_names       sboof ghjhjgh
-    listen             0.0.0.0:4245
-    root             ./root/
-    allow_methods    GET POST DELETE
+    server_names       sboof 
+    listen             localhost:2425
+
+    root             ./www/server0/
+    allow_methods    GET POST DELETE 
 
     
-    index index0002.html index.html55
-
-    error_page    404 ./errorsPages/404.html
+    error_page    403 ./errorsPages/404.html 
     error_page    409 ./errorsPages/407.html
     error_page    405 ./errorsPages/403.html
 
@@ -18,7 +17,7 @@ server
     redirection    /laloli/ https://www.youtube.com/
     redirection    /PATH00/index.html /PATH01/index.html
 
-    client_max_body_size 14554
+    client_max_body_size 14
 
     location /PATH00/
     {
@@ -29,19 +28,19 @@ server
         upload_path /somewhere/
     }
 
-    location /root/
+    location /server0/
     {
         root ./root/
         autoindex on
         allow_methods POST GET
-        upload_path
+        upload_path ZZ
     }
        location /cgi/
     {
         root ./root/
         autoindex on
         allow_methods POST GET
-        upload_path
+        upload_path ww
     }
   
 
@@ -52,29 +51,13 @@ server
         allow_methods GET
     }
 
-    location /PATH00/test/
-    {
-        root ./root/test/
-        autoindex  on
-        index   index.html
-        allow_methods GET
-    }
-
-    location /PATH00/test/erro
-    {
-        root ./root/univers/
-        autoindex on
-        client_max_body_size 1234
-        allow_methods GET
-    }
-
     location /cocacola/
     {
         root ./root/
         autoindex off 
         client_max_body_size 1234
-        upload_path /testest/ss
-        allow_methods GET DELETE
+        upload_path ./upl_serv0
+        allow_methods GET DELETE POST
         index o.html
     }
 
@@ -86,46 +69,14 @@ server
         allow_methods GET
     }
 }
-server
-{
-    server_names    narjdal server1
-    listen          localhost:8080
-    root             ./server1/root/
-    allow_methods      GET DELETE
-   index            index.server5.html
-    upload_path     ./somewhere/server1/
-    error_page    404 ./server1/errorsPages/404.html
-    error_page    409 ./server1/errorsPages/407.html
-    error_page    405 ./server1/errorsPages/403.html
-    autoindex   on
-    redirection    /server1/laloli https://www.youtube.com/
-    redirection    /server1/PATH00/index.html /PATH01/index.html
-    client_max_body_size 1999
-       
-}
-server
-{
-    server_names    server2 server2
-    listen            192.168.1.1:99
-   
-    allow_methods    GET POST 
-    index   index0002.html index.html55
-    upload_path     ./somewhere/server2/
-
-    client_max_body_size  150
-    root        
-    autoindex off
-
-   
-}
 
 server
 {
     server_names    server3 server3
-    listen           1.1.1.1:150
-    root             ./server3/
+    listen          192.168.0.1:2425
+    root             ./www/server3/
     allow_methods   GET POST
-    index           index.html
+    
     upload_path     ./server3/
 
     redirection    /server3/laloli https://www.youtube.com/
@@ -137,11 +88,11 @@ server
      location ./narjdal3/
     {
         root ./narjdal3/
-        autoindex  
+        autoindex  on
         index   index.html
         allow_methods GET
         upload_path upload/
-        client_max_body_size 
+        client_max_body_size 150
       
 
     }
@@ -156,7 +107,6 @@ server
     }
      location location/server3/nb3
     {
-        root 
         autoindex  off
         index   index.htmlnb3
         allow_methods GET
