root loc fixed , listen fixed , headers fixed

--- a/config/1.config
+++ b/config/1.config
@@ -1,12 +1,12 @@
 server
 {
     server_names       sboof 
-    listen             localhost:2425
+    listen             localhost:150
 
     root             ./www/server0/
     allow_methods    GET POST DELETE 
 
-    
+    index.html      index0002.html
     error_page    403 ./errorsPages/404.html 
     error_page    409 ./errorsPages/407.html
     error_page    405 ./errorsPages/403.html
@@ -73,7 +73,7 @@ server
 server
 {
     server_names    server3 server3
-    listen          192.168.0.1:2425
+    listen          192.168.0.1:150
     root             ./www/server3/
     allow_methods   GET POST
     
@@ -114,3 +114,48 @@ server
       
     }
 }
+server
+{
+    server_names    server4 server4
+    listen          192.168.0.1:0
+    root             ./www/server4/
+    allow_methods   GET POST
+    
+    upload_path     ./server3/
+
+    redirection    /server3/laloli https://www.youtube.com/
+    redirection    /server3/PATH00/index.html /PATH01/index.html
+     
+    autoindex   on
+
+   
+     location ./narjdal3/
+    {
+        root ./narjdal3/
+        autoindex  on
+        index   index.html
+        allow_methods GET
+        upload_path upload/
+        client_max_body_size 150
+      
+
+    }
+     location location/server3/nb2
+    {
+        root ./root/test/nb2
+       
+        index   index.htmlnb2
+        allow_methods GET
+        upload_path server3/uploaad/nb2
+      
+    }
+     location location/server3/nb3
+    {
+        autoindex  off
+        index   index.htmlnb3
+        allow_methods GET
+        upload_path server3/uploaad/nb3
+      
+    }
+}
+
