--- a/config/1.config
+++ b/config/1.config
@@ -2,11 +2,10 @@ server
 {
     server_names       sboof 
     listen             localhost:150
-
     root             ./www/server0/
     allow_methods    GET POST DELETE 
 
-    index.html      index0002.html
+    index         index0002.html
     error_page    403 ./errorsPages/403.html 
     error_page    409 ./errorsPages/407.html
     error_page    405 ./errorsPages/403.html
@@ -18,7 +17,7 @@ server
     redirection    /PATH00/index.html /PATH01/index.html
 
     client_max_body_size 14
-
+    
     location /PATH00/
     {
         client_max_body_size 12555
