--- a/config/1.config
+++ b/config/1.config
@@ -2,7 +2,8 @@ server
 {
     server_names       sboof 
     listen             localhost:150
-    root             ./www/server0/
+
+    root              www/server0/
     allow_methods    GET POST DELETE 
 
   
@@ -13,7 +14,7 @@ server
     autoindex on
     upload_path     ./somewhere/
 
-    redirection    /laloli/ https://www.youtube.com/
+    redirection    /laloli/ https://www.youtube.com/ 
     redirection    /PATH00/index.html /PATH01/index.html
 
     client_max_body_size 14
@@ -25,6 +26,7 @@ server
         autoindex on
         allow_methods POST DELETE
         upload_path /somewhere/
+        index /PATH00/index01.html
     }
 
     location /server0/
@@ -40,6 +42,7 @@ server
         autoindex on
         allow_methods POST GET
         upload_path ww
+        index
     }
   
 
@@ -48,6 +51,7 @@ server
         root ./root/roxy-master/
         autoindex on
         allow_methods GET
+        index loc4/indexww.html
     }
 
     location /cocacola/
@@ -57,7 +61,7 @@ server
         client_max_body_size 1234
         upload_path ./upl_serv0
         allow_methods GET DELETE POST
-        index o.html
+        index o.html cocacola.html cocacola2.html
     }
 
     location /pepsi/
@@ -66,13 +70,14 @@ server
         autoindex on 
         client_max_body_size 1234
         allow_methods GET
+        index indexpepsi.html indexpepsi2.html
     }
 }
 
 server
 {
     server_names    server3 server3
-    listen          192.168.0.1:8080
+    listen          192.168.150.1:8080
     root             ./www/server3/
     allow_methods   GET POST
     
@@ -88,7 +93,7 @@ server
     {
         root ./narjdal3/
         autoindex  on
-        index   index.html
+        index   index.html ww ss ss 
         allow_methods GET
         upload_path upload/
         client_max_body_size 150
@@ -142,7 +147,6 @@ server
      location location/server3/nb2
     {
         root ./root/test/nb2
-       
         index   index.htmlnb2
         allow_methods GET
         upload_path server3/uploaad/nb2
