--- a/config/1.config
+++ b/config/1.config
@@ -5,7 +5,7 @@ server
 
     root              www/server0/
     allow_methods    GET POST DELETE 
-
+    index.html djksjkdkjadjksajkdjsk
   
     error_page    403 ./errorsPages/403.html 
     error_page    409 ./errorsPages/407.html
@@ -26,7 +26,7 @@ server
         autoindex on
         allow_methods POST DELETE
         upload_path /somewhere/
-        index /PATH00/index01.html
+        index.html /PATH00/index01.html
     }
 
     location /server0/
@@ -131,7 +131,7 @@ server
     redirection    /server3/PATH00/index.html /PATH01/index.html
      
     autoindex   on
-
+    index.html      wiwoww
    
      location ./narjdal3/
     {
