--- a/config/1.config
+++ b/config/1.config
@@ -88,6 +88,7 @@ server
      
     autoindex   on
 
+    client_max_body_size 1498
    
      location ./narjdal3/
     {
@@ -133,6 +134,7 @@ server
     autoindex   on
     index.html      wiwoww
    
+        client_max_body_size 180
      location ./narjdal3/
     {
         root ./narjdal3/
