--- a/config/1.config
+++ b/config/1.config
@@ -5,7 +5,7 @@ server
 
     root              www/server0/
     allow_methods    GET POST DELETE 
-    index.html djksjkdkjadjksajkdjsk
+    index.html  index.html 
   
     error_page    403 ./errorsPages/403.html 
     error_page    409 ./errorsPages/407.html
