--- a/config/1.config
+++ b/config/1.config
@@ -5,7 +5,7 @@ server
 
     root              www/server0/
     allow_methods    GET POST DELETE 
-    index.html  index.html 
+    index.html  index.html  index0002.html inde sss index.09930930html indexlñklaxlksd.html
   
     error_page    403 ./errorsPages/403.html 
     error_page    409 ./errorsPages/407.html
@@ -19,6 +19,12 @@ server
 
     client_max_body_size 14
     
+    cgi asdsadsadsad.php
+    {
+        cgi_path www/config/cgi ss
+        cgi_name  cgi_01
+    }
+
     location /PATH00/
     {
         client_max_body_size 12555
@@ -136,6 +142,13 @@ server
    
         client_max_body_size 180
       
+        
+    cgi server4.py
+    {
+        cgi_path www/server4/config/cgi
+        cgi_name  server4/cgi_01
+    }
+    
      location ./narjdal3/
     {
         root ./narjdal3/
