--- a/config/1.config
+++ b/config/1.config
@@ -5,8 +5,8 @@ server
 
     root              www/server0/
     allow_methods    GET POST DELETE 
-    index.html  indexeeeeee.html  index0002.html inde sss index.09930930html indexlñklaxlksd.html
-  
+   
+    index.html index.html
     error_page    403 ./errorsPages/403.html 
     error_page    409 ./errorsPages/407.html
     error_page    405 ./errorsPages/403.html
@@ -21,8 +21,7 @@ server
     
     cgi .php
     {
-        cgi_path www/config/cgi 
-        cgi_name  cgi_01
+        cgi_path www/config/cgi/cgi_tester
     }
 
     location /PATH00/
