--- a/config/1.config
+++ b/config/1.config
@@ -7,7 +7,7 @@ server
     allow_methods    GET POST DELETE 
    
 
-    index.html index.html
+   
     error_page    403 ./errorsPages/403.html 
     error_page    409 ./errorsPages/407.html
     error_page    405 ./errorsPages/403.html
@@ -22,9 +22,13 @@ server
     
     cgi .php
     {
-        cgi_path www/config/cgi/cgi_tester
+        cgi_path www/config/php-cgi
     }
 
+    cgi .py
+    {
+        cgi_path /
+    }
     location /PATH00/
     {
         client_max_body_size 12555
@@ -42,14 +46,7 @@ server
         allow_methods POST GET
         upload_path ZZ
     }
-       location /cgi/
-    {
-        root ./root/
-        autoindex on
-        allow_methods POST GET
-        upload_path ww
-        index
-    }
+    
   
 
     location /PATH00/jghjhj/
