--- a/config/1.config
+++ b/config/1.config
@@ -4,7 +4,7 @@ server
     listen             localhost:150
 
     root              www/server0/
-    allow_methods    GET POST DELETE 
+    allow_methods     POST DELETE 
    
 
    
@@ -29,14 +29,16 @@ server
     {
         cgi_path /
     }
+
     location /PATH00/
     {
+        
         client_max_body_size 12555
         root ./root/hangover-master/
         autoindex on
         allow_methods POST DELETE
         upload_path /somewhere/
-        index.html /PATH00/index01.html
+        index /PATH00/index01.html
     }
 
     location /server0/
@@ -135,7 +137,7 @@ server
     redirection    /server3/PATH00/index.html /PATH01/index.html
      
     autoindex   on
-    index.html      wiwoww
+    index      wiwoww
    
         client_max_body_size 180
       
