--- a/config/1.config
+++ b/config/1.config
@@ -4,13 +4,7 @@ server
     listen             localhost:150
 
     root              www/server0/
-    allow_methods     POST DELETE 
-   
-
-   
-    error_page    403 ./errorsPages/403.html 
-    error_page    409 ./errorsPages/407.html
-    error_page    405 ./errorsPages/403.html
+    allow_methods     GET POST DELETE 
 
     autoindex on
     upload_path     ./somewhere/
@@ -18,11 +12,11 @@ server
     redirection    /laloli/ https://www.youtube.com/ 
     redirection    /PATH00/index.html /PATH01/index.html
 
-    client_max_body_size 14
+    client_max_body_size 10
     
     cgi .php
     {
-        cgi_path www/config/php-cgi
+        cgi_path www/config/cgi/php-cgi
     }
 
     cgi .py
@@ -82,7 +76,7 @@ server
 server
 {
     server_names    server3 server3
-    listen          192.168.150.1:8080
+    listen          192.168.150.1:10
     root             ./www/server3/
     allow_methods   GET POST
     
