doublon conf file , vrs

--- a/webservdata/config/1.config
+++ b/webservdata/config/1.config
@@ -1,20 +1,23 @@
 server
 {
+   
     server_names       sboof 
     listen             localhost:150
                
     root              www/server0/
     allow_methods     GET POST DELETE 
 
-
+    
     autoindex on
     upload_path     ./somewhere/
-
+     
     redirection    /laloli/ https://www.youtube.com/ 
     redirection    /PATH00/index.html /PATH01/index.html
-
+    
     client_max_body_size 14
     
+
+
     cgi .php
     {
         cgi_path www/config/cgi/php-cgi
@@ -32,9 +35,9 @@ server
         autoindex on
         allow_methods POST DELETE
         upload_path /somewhere/
-        index.html /PATH00/index01.html
+        index /PATH00/index01.html
     }
-
+    
     location /server0/
     {
         root ./root/
@@ -43,7 +46,7 @@ server
         upload_path ZZ
     }
     
-  
+   
 
     location /PATH00/jghjhj/
     {
@@ -71,6 +74,7 @@ server
         allow_methods GET
         index indexpepsi.html indexpepsi2.html
     }
+    
 }
 
 server
@@ -126,14 +130,14 @@ server
     allow_methods   GET POST
     
     upload_path     ./server3/
-
+    
     redirection    /server3/laloli https://www.youtube.com/
     redirection    /server3/PATH00/index.html /PATH01/index.html
      
     autoindex   on
-    index.html      wiwoww
+    index      wiwoww
    
-        client_max_body_size 180
+     client_max_body_size 180
       
         
     cgi          .py       
@@ -168,5 +172,6 @@ server
         upload_path server3/uploaad/nb3
       
     }
-}
+      
 
+}
